# RomanNumeralKataC

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  clean-run.sh  clean.sh  main.c
CMakeModules/: FindCheck.cmake
make/: Makefile
make/src/: build.make  flags.make
make/tests/: build.make  flags.make
src/: CMakeLists.txt  array_utils.h  romanCalculator.c  romanCalculator.h  roman_calculator.c  roman_calculator.h  roman_converter.c  roman_converter.h  roman_converter_utils.c  roman_converter_utils.h  roman_numeral_pair.c  roman_numeral_pair.h
tests/: CMakeLists.txt  check_main.c  check_romanCalculator.c  check_roman_calculator.c  check_roman_converter.c  check_roman_converter_to_arabic.c  check_roman_converter_to_roman.c  check_roman_converter_utils.c  check_roman_numeral_pair.c  check_suites.h
